finalize the website content static

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -12,6 +12,11 @@
     "subtitle": "A home for faith, fellowship, and growth in Christ.",
     "cta": "Join Our Service"
   },
+  "welcome": {
+    "quote": "\"A city on a hill cannot be hidden\" (Matthew 5:14b). We pray that the Lord will use Little Rock Immanuel Chinese Baptist Church so that this \"city on a hill\" can \"rise like the sun in its strength\" (Judges 5:31), shining brightly for the Lord in this new era, illuminating those around us, and bringing glory to God.",
+    "invitation": "We sincerely invite you to participate in our church's activities! Let us know the Lord together, support each other in His love, and walk the heavenly path together. Immanuel!",
+    "signature": "Pastor Chunhai Li"
+  },
   "about": {
     "title": "About Us",
     "slogan": "Witness Christ & Impact the World!",
