--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -12,6 +12,11 @@
     "subtitle": "一個信仰、團契和在基督裏成長的家。",
     "cta": "加入崇拜"
   },
+  "welcome": {
+    "quote": "“城造在山上，是不能隱藏的”（馬太福音5：14下）。我們祈禱，求主使用小石城以馬內利華語浸信會，使“這座造在山上的城”能“如日頭出現、光輝烈烈”（士師記5：31），在新時代中為主發大光，照亮周圍的人，使榮耀歸於上帝。",
+    "invitation": "我們誠摯地邀請您來參加我們教會的各項活動！讓我們一同認識主，在祂的愛裏彼此攙扶，共走天路。以馬內利！",
+    "signature": "李春海牧師"
+  },
   "about": {
     "title": "關於我們",
     "slogan": "見證基督，影響世界！",
