--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -2,10 +2,25 @@
   "nav": {
     "home": "首頁",
     "about": "關於我們",
+    "onlineWorship": "網上崇拜",
     "updates": "每週更新",
     "gallery": "教會相簿",
     "giving": "奉獻支持",
     "contact": "聯繫我們"
+  },
+  "onlineWorshipPage": {
+    "title": "網上崇拜",
+    "liveStatus": "實況轉播",
+    "quote": "「因為無論在哪裡，有兩三個人奉我的名聚會，那裡就有我在他們中間。」—— 馬太福音 18:20",
+    "communityTitle": "加入我們的社群",
+    "communityContent": "如果上方的播放器顯示「直播已結束」或「離線」，您可以在我們的 YouTube 頻道上找到最近的崇拜錄影。",
+    "serviceTimeTitle": "崇拜時間",
+    "serviceTimeContent": "每週日早上 9:00 (美中時間)",
+    "connectTitle": "建立聯繫",
+    "connectContent": "歡迎參加我們週間的各個團契聚會",
+    "youtubeTitle": "造訪我們的頻道",
+    "youtubeContent": "訂閱我們的頻道，以便在我們直播或發布新消息時收到通知。",
+    "youtubeButton": "訂閱頻道"
   },
   "hero": {
     "title": "歡迎來到 以馬內利",
