fix mail function

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -114,7 +114,7 @@
     "info": {
       "address": "9701 W Markham St, Little Rock, AR 72205",
       "phone": "(405) 637-5635",
-      "email": "info@lricbc.org"
+      "email": "chinesechurch@lricbc.org"
     },
     "form": {
       "name": "Name",
