--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -205,6 +205,7 @@
       "worship": "Worship",
       "others": "Others"
     },
+    "searchPlaceholder": "Find an event or memory...",
     "backToList": "Back to Gallery List",
     "viewFullAlbum": "View More Photos"
   },
