--- a/src/locales/zh-CN/common.json
+++ b/src/locales/zh-CN/common.json
@@ -205,6 +205,7 @@
       "worship": "主日崇拜",
       "others": "其他"
     },
+    "searchPlaceholder": "尋找活動或回憶...",
     "backToList": "返回相簿列表",
     "viewFullAlbum": "查看更多相片"
   },
